Fixed z-index of main squirrel so it is behind buttons

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -309,6 +309,7 @@ p {
 }
 
 .squirrel0 {
+  z-index: -1;
 	position: absolute;
 	bottom: 3%;
 	width: 10%;
